--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title> HelthHub </title>
+    <title> HealthHub </title>
 </head>
 <body>
 
