--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -12,7 +12,7 @@
 
     <main>
         <h2>Formulario de contacto</h2>
-        <form action="respuestaform.html" method="get">
+        <form action="respuestaform.html" method="post">
 
             <label for="asunto">Asunto:</label>
             <input type="text" id="asunto" required><br><br>
