--- a/articulos/asma.html
+++ b/articulos/asma.html
@@ -8,7 +8,9 @@
 <body>
     <header>
         <h1>HealthHub - Enciclopedia Ilustrada de Salud</h1>
-        <img src="../imagenes/logo.jpeg" alt="Logo de la pagina" width="200" height="200">
+        <a href="../index.html">
+            <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
+        </a>
     </header>
 
     <main>
