--- a/articulos/asma.html
+++ b/articulos/asma.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <title>Asma - HealtHub</title>
 </head>
-
+<header>
+        <h1>HealthHub - Enciclopedia Ilustrada de Salud</h1>
+        <a href="../index.html">
+            <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
+        </a>
+    </header>
 <body>
     
 
