--- a/buscador/resultado.html
+++ b/buscador/resultado.html
@@ -7,7 +7,9 @@
 <body>
     <header>
         <h1>HealthHub - Enciclopedia Ilustrada de Salud</h1>
-        <img src="../imagenes/logo.jpeg" alt="Logo de la pagina" width="200" height="200">
+        <a href="../index.html">
+            <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
+        </a>
     </header>
 
     <h1>Resultados de la Búsqueda</h1>
