--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -5,9 +5,11 @@
         <title>Formulario de contacto - HealthHub </title>
     </head>
 <body>
-    <header>
+   <header>
         <h1>HealthHub - Enciclopedia Ilustrada de Salud</h1>
-        <img src="../imagenes/logo.jpeg" alt="Logo de la pagina" width="200" height="200">
+        <a href="../index.html">
+            <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
+        </a>
     </header>
 
     <main>
