--- a/indices/d.html
+++ b/indices/d.html
@@ -5,6 +5,12 @@
         <title> Letra D - HealthHub </title>
     </head>
 <body>
+    <header>
+        <h1>HealthHub - Enciclopedia Ilustrada de Salud</h1>
+        <a href="../index.html">
+            <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
+        </a>
+    </header>
     
 
     <main>
