--- a/buscador/buscador.html
+++ b/buscador/buscador.html
@@ -14,7 +14,7 @@
     <h1>Buscador de Artículos de HealthHub</h1>
     
     <form action="resultado.html" method="get">
-        <label for="descripcion">Descripción:</label><br>
+        <label for="descripcion">Descripción:*</label><br>
         <input type="text" id="descripcion" name="descripcion" required><br><br>
         
         <label for="causas">Causas:</label><br>
