--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Diabetes - HealtHub</title>
+    <style>
+        table, tr, td, th {
+                border: 1px solid #653299;
+            }
+    </style>
 </head>
 
 <body>
@@ -40,6 +45,15 @@
 
         <h2>¿Qué es la diabetes?</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ZMo_Xi85KNE?si=cxbzIllNAnEJ2uB0" title="Titulo del video: ¿Qué es la diabetes?" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        <table>
+            <tr>
+                <td></td>
+                <th scope="col">Síntomas</th>
+                <th scope="col">Causas</th>
+                <th scope="col">Tratamiento</th>
+            </tr>
+        </table>
         
         <h4><a href="../indices/d.html">Volver a la letra D </a></h4>
         <h4><a href="../index.html">Volver al índice</a></h4>
