--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -53,6 +53,12 @@
                 <th scope="col">Causas</th>
                 <th scope="col">Tratamiento</th>
             </tr>
+             <tr>
+                <th scope="row">Diabetes Tipo 1</th><td>7</td><td>7</td><td>7</td></tr>
+            <tr>
+                <th scope="row">Diabetes Tipo 2</th><td>7</td><td>7</td><td>7</td></tr>
+            <tr>
+                <th scope="row">Diabetes Gestaciona</th><td>7</td><td>7</td><td>7</td></tr>
         </table>
         
         <h4><a href="../indices/d.html">Volver a la letra D </a></h4>
