--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -54,11 +54,70 @@
                 <th scope="col">Tratamiento</th>
             </tr>
              <tr>
-                <th scope="row">Diabetes Tipo 1</th><td>7</td><td>7</td><td>7</td></tr>
+                <th scope="row">Diabetes Tipo 1</th>
+                 <td>
+                    <ul>
+                        <li>Aumento de la sed</li>
+                        <li>Pérdida de peso</li>
+                        <li>Fatiga extrema</li>
+                    </ul>
+                 </td>
+                 <td>
+                     <ul>
+                        <li>Autoinmunidad</li>
+                        <li>Genética</li>
+                    </ul>
+                 </td>
+                 <td>
+                     <ul>
+                        <li>Inyecciones de insulina</li>
+                        <li>Monitoreo de glucosa</li>
+                    </ul>
+                 </td>
+             </tr>
             <tr>
-                <th scope="row">Diabetes Tipo 2</th><td>7</td><td>7</td><td>7</td></tr>
+                <th scope="row">Diabetes Tipo 2</th>
+                <td>
+                    <ul>
+                        <li>Micción frecuente</li>
+                        <li>Aumento del apetito</li>
+                        <li>Visión borrosa</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Resistencia a la insulina</li>
+                        <li>Obesidad</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Control de dieta</li>
+                        <li>Ejercicio</li>
+                        <li>Medicamentos orales</li>
+                    </ul>
+                </td>
+            </tr>
             <tr>
-                <th scope="row">Diabetes Gestaciona</th><td>7</td><td>7</td><td>7</td></tr>
+                <th scope="row">Diabetes Gestaciona</th>
+                <td>
+                    <ul>
+                        <li>Náuseas</li>
+                        <li>Niveles altos de azúcar en sangre</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Hormonas del embarazo</li>
+                    </ul>
+                </td>
+                <td>
+                    <ul>
+                        <li>Control de glucosa</li>
+                        <li>Dieta saludable</li>
+                    </ul>
+                </td>
+            </tr>
         </table>
         
         <h4><a href="../indices/d.html">Volver a la letra D </a></h4>
