--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -6,7 +6,7 @@
     <title>Diabetes - HealtHub</title>
     <style>
         table, tr, td, th {
-                border: 1px solid #653299;
+                border: 1px solid #0540f2;
             }
     </style>
 </head>
@@ -99,7 +99,7 @@
                 </td>
             </tr>
             <tr>
-                <th scope="row">Diabetes Gestaciona</th>
+                <th scope="row">Diabetes Gestacional</th>
                 <td>
                     <ul>
                         <li>Náuseas</li>
