--- a/articulos/diabetes.html
+++ b/articulos/diabetes.html
@@ -46,6 +46,8 @@
         <h2>¿Qué es la diabetes?</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ZMo_Xi85KNE?si=cxbzIllNAnEJ2uB0" title="Titulo del video: ¿Qué es la diabetes?" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
+
+        <h3>Tabla de información</h3>
         <table>
             <tr>
                 <td></td>
