--- a/articulos/alergia.html
+++ b/articulos/alergia.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Alergia - HealtHub</title>
+    <style>
+        table, tr, td, th {
+                border: 1px solid #0540f2;
+            }
+    </style>
 </head>
 
 <body>
