--- a/articulos/alergia.html
+++ b/articulos/alergia.html
@@ -45,7 +45,80 @@
         
         <h3>¿Que hacer en caso de ataque de alergia?</h3>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/W6WPWuIdaEo?si=FJcn61ZHlMm8uGM_" title="Titulo del video: ¿Que hacer en caso de ataque de alergia?" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        
+        <h3>Tabla de información</h3>
+<table>
+    <tr>
+        <td></td>
+        <th scope="col">Síntomas</th>
+        <th scope="col">Causas</th>
+        <th scope="col">Tratamiento</th>
+    </tr>
+    <tr>
+        <th scope="row">Alergia Estacional</th>
+        <td>
+            <ul>
+                <li>Estornudos</li>
+                <li>Congestión nasal</li>
+                <li>Ojos llorosos</li>
+            </ul>
+        </td>
+        <td>
+            <ul>
+                <li>Pólenes</li>
+                <li>Cambios estacionales</li>
+            </ul>
+        </td>
+        <td>
+            <ul>
+                <li>Antihistamínicos</li>
+                <li>Corticosteroides nasales</li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <th scope="row">Alergia Alimentaria</th>
+        <td>
+            <ul>
+                <li>Erupciones cutáneas</li>
+                <li>Hinchazón</li>
+                <li>Problemas digestivos</li>
+            </ul>
+        </td>
+        <td>
+            <ul>
+                <li>Proteínas alimentarias</li>
+                <li>Genética</li>
+            </ul>
+        </td>
+        <td>
+            <ul>
+                <li>Evitar alimentos desencadenantes</li>
+                <li>Inyecciones de epinefrina</li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <th scope="row">Alergia a Medicamentos</th>
+        <td>
+            <ul>
+                <li>Urticaria</li>
+                <li>Dificultad para respirar</li>
+            </ul>
+        </td>
+        <td>
+            <ul>
+                <li>Reacción alérgica a medicamentos</li>
+            </ul>
+        </td>
+        <td>
+            <ul>
+                <li>Suspensión del medicamento</li>
+                <li>Tratamiento con antihistamínicos</li>
+            </ul>
+        </td>
+    </tr>
+</table>
+
         <h4><a href="../indices/a.html">Volver a la letra A </a></h4>
         <h4><a href="../index.html">Volver al índice</a></h4>
 
