--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -14,6 +14,7 @@
 
     <main>
         <h2>Formulario de contacto</h2>
+        <p>Los campos marcados con * son obligatorios.</p>
         <form action="respuestaform.html" method="get">
 
             <label for="asunto">Asunto:*</label>
