--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <section>
         <h2>Ir al <a href="buscador/buscador.html">Buscador</a> de HealthHub.</h2>
     </section>
-
+    
+    <section>
+        <h2>Ir al <a href="formulario/formulariohtml5.html">Formulario de sintomas</a> de HealthHub.</h2>
+    </section>
+    
     <nav>
         <h2>Índice Alfabético</h2>
         <ul>
