--- a/buscador/buscador.html
+++ b/buscador/buscador.html
@@ -11,7 +11,9 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
+    
     <h1>Buscador de Artículos de HealthHub</h1>
+    <p>Los campos marcados con * son obligatorios.</p>
     
     <form action="resultado.html" method="get">
         <label for="descripcion">Descripción:*</label><br>
