--- a/formulario/formulariohtml5.html
+++ b/formulario/formulariohtml5.html
@@ -18,34 +18,34 @@
     
     <form action="respuestaform.html" method="get">
 
-        <label for="nombre">Nombre completo *</label><br>
+        <label for="nombre"><strong>Nombre completo *</strong></label><br>
         <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre" required>
         <br><br>
 
-        <label for="descripcion_sintomas">Descripción de los síntomas *</label><br>
+        <label for="descripcion_sintomas"><strong>Descripción de los síntomas *</strong></label><br>
         <textarea id="descripcion_sintomas" name="descripcion_sintomas" rows="4" cols="50" placeholder="Describa sus síntomas" required></textarea>
         <br><br>
 
-        <label for="email">Correo electrónico *</label><br>
+        <label for="email"><strong>Correo electrónico *</strong></label><br>
         <input type="email" id="email" name="email" placeholder="ejemplo@correo.com" required>
         <p>Introduzca una dirección de correo válida. Ejemplo: usuario@dominio.com</p>
         <br><br>
 
-        <label for="fecha_sintomas">Fecha de inicio de los síntomas *</label><br>
+        <label for="fecha_sintomas"><strong>Fecha de inicio de los síntomas *</strong></label><br>
         <input type="date" id="fecha_sintomas" name="fecha_sintomas" required>
         <br><br>
 
-        <label for="dolor">Intensidad del dolor *</label><br>
+        <label for="dolor"><strong>Intensidad del dolor *</strong></label><br>
         <input type="range" id="dolor" name="dolor" min="0" max="10" step="1" value="5">
         <p>Seleccione un valor entre 0 (sin dolor) y 10 (dolor insoportable).</p>
         <br><br>
 
-        <label for="dias_sintomas">Número de días con síntomas *</label><br>
+        <label for="dias_sintomas"><strong>Número de días con síntomas *</strong></label><br>
         <input type="number" id="dias_sintomas" name="dias_sintomas" min="1" max="365" placeholder="Escriba el número de días" required>
         <p>Introduzca un número entre 1 y 365.</p>
         <br><br>
 
-        <label for="color_piel">Color predominante en la piel o zona afectada</label><br>
+        <label for="color_piel"><strong>Color predominante en la piel o zona afectada</strong></label><br>
         <input type="color" id="color_piel" name="color_piel" value="#ffffff">
         <p>Si sus síntomas no están relacionados con una herida visible o color de la piel (por ejemplo, dolor de cabeza), no es necesario completar este campo.</p>
         <br><br>
