--- a/formulario/formulariohtml5.html
+++ b/formulario/formulariohtml5.html
@@ -48,12 +48,12 @@
         <label for="color_piel"><strong>Color predominante en la piel o zona afectada</strong></label><br>
         <input type="color" id="color_piel" name="color_piel" value="#ffffff">
         <p>Si sus síntomas no están relacionados con una herida visible o color de la piel (por ejemplo, dolor de cabeza), no es necesario completar este campo.</p>
-        <br><br>
+        <br>
 
         <input type="submit" value="Enviar">
     </form>
-
-     <a href="../index.html">Volver al índice</a>
+      
+     <br><a href="../index.html">Volver al índice</a>
     
     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
