--- a/articulos/dolor_cabeza.html
+++ b/articulos/dolor_cabeza.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Dolor de Cabeza - HealtHub</title>
+    <title>Dolor de Cabeza - HealthHub</title>
 </head>
 
 <body>
@@ -17,6 +17,30 @@
     <main>
         <h2>Dolor de Cabeza</h2>
         <p><strong>Descripción:</strong> El dolor de cabeza es una molestia o dolor que se experimenta en cualquier parte de la cabeza o el cuello.</p>
+
+        <!-- Imagen con Mapa de Imagen -->
+        <img src="../imagenes/dolor-de-cabeza.jpg" alt="Mapa de imagen sobre tipos de dolor de cabeza" usemap="#dolorCabezaMap" width="600" height="400">
+
+        <!-- Definición del Mapa de Imagen -->
+        <map name="dolorCabezaMap">
+            <!-- Rectángulo 1: Problemas temporomandibulares -->
+            <area shape="rect" coords="0,0,200,200" href="../articulos/temporomandibulares.html" alt="Problemas temporomandibulares" title="Problemas temporomandibulares">
+
+            <!-- Rectángulo 2: Dolor en los senos -->
+            <area shape="rect" coords="200,0,400,200" href="../articulos/senos.html" alt="Dolor en los senos" title="Dolor en los senos">
+
+            <!-- Círculo 1: Cefalea en racimos -->
+            <area shape="circle" coords="500,100,80" href="../articulos/racimos.html" alt="Cefalea en racimos" title="Cefalea en racimos">
+
+            <!-- Círculo 2: Migraña -->
+            <area shape="circle" coords="100,300,80" href="../articulos/migrana.html" alt="Migraña" title="Migraña">
+
+            <!-- Polígono 1: Dolor por tensión -->
+            <area shape="poly" coords="250,200,350,220,380,280,320,300,250,260" href="../articulos/tension.html" alt="Dolor por tensión" title="Dolor por tensión">
+
+            <!-- Polígono 2: Dolor en el cuello -->
+            <area shape="poly" coords="400,220,450,240,480,300,430,340,380,290" href="../articulos/cuello.html" alt="Dolor en el cuello" title="Dolor en el cuello">
+        </map>
 
         <h3>Causas</h3>
         <p>Puede ser causado por estrés, tensión muscular, migrañas o infecciones.</p>
@@ -37,15 +61,16 @@
         <h3>Expectativas</h3>
         <p>La mayoría de los dolores de cabeza se resuelven con tratamiento, pero algunos pueden ser crónicos y requerir seguimiento médico.</p>
         
-        <h3>Tipos de dolores de cabeza, tratamiento y recuperación</h3>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/nzwIiy4opi8?si=SYB7j9PODVbRxPjZ" title="Titulo del video: Tipos de dolores de cabeza, tratamiento y recuperación" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h3>Tipos de dolores de cabeza, tratamiento y recuperación</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/nzwIiy4opi8?si=SYB7j9PODVbRxPjZ" title="Tipos de dolores de cabeza, tratamiento y recuperación" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         
-        <h4><a href="../indices/d.html">Volver a la letra D </a></h4>
-        <h4><a href="../index.html">Volver al índice </a></h4>
+        <h4><a href="../indices/d.html">Volver a la letra D</a></h4>
+        <h4><a href="../index.html">Volver al índice</a></h4>
     </main>
 
     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
     </footer>
 </body>
+
 </html>
