--- a/articulos/dolor_cabeza.html
+++ b/articulos/dolor_cabeza.html
@@ -38,8 +38,8 @@
             <!-- Polígono 1: Dolor por tensión -->
             <area shape="poly" coords="250,200,350,220,380,280,320,300,250,260" href="../articulos/tension.html" alt="Dolor por tensión" title="Dolor por tensión">
 
-            <!-- Polígono 2 ajustado: Dolor en el cuello -->
-            <area shape="poly" coords="420,220,470,240,500,300,450,340,400,290" href="../articulos/cuello.html" alt="Dolor en el cuello" title="Dolor en el cuello">
+            <!-- Polígono 2 ajustado: Migraña -->
+            <area shape="poly" coords="420,220,470,240,500,300,460,340,410,290" href="../articulos/migrana.html" alt="Migraña" title="Migraña">
         </map>
 
         <h3>Causas</h3>
