--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </section>
     
     <section>
-        <h2>Ir al <a href="formulario/formulariohtml5.html">Formulario de sintomas</a> de HealthHub.</h2>
+        <h2>Ir al <a href="formulario/formulariohtml5.html">Formulario de síntomas</a> de HealthHub.</h2>
     </section>
     
     <nav>
@@ -53,6 +53,21 @@
 
     <section>
         <h2>Temas Destacados</h2>
+
+        <!-- Articulaciones - Imagen interactiva -->
+        <article>
+            <h3>Articulaciones</h3>
+            <img src="imagenes/persona.jpg" alt="Cuerpo humano" usemap="#cuerpo-map" width="400" height="800">
+            <map name="cuerpo-map">
+                <area shape="rect" coords="130,50,260,150" alt="Hombro" href="articulos/hombro.html">
+                <area shape="rect" coords="130,600,260,700" alt="Rodilla" href="articulos/rodilla.html">
+                <area shape="circle" coords="190,130,50" alt="Cabeza" href="articulos/cabeza.html">
+                <area shape="circle" coords="190,750,40" alt="Tobillo" href="articulos/tobillo.html">
+                <area shape="poly" coords="180,200,220,200,230,250,170,250" alt="Codo derecho" href="articulos/codo_derecho.html">
+                <area shape="poly" coords="180,300,220,300,230,350,170,350" alt="Codo izquierdo" href="articulos/codo_izquierdo.html">
+            </map>
+        </article>
+
         <article>
             <h3>Diabetes</h3>
             <img src="imagenes/diabetes.jpeg" alt="Foto diabetes: Persona midiendose el azucar en sangre." width="400" height="200">
@@ -88,11 +103,8 @@
         <p>Cualquier duda, sugerencia o problema que haya tenido puede rellenar este <a href="formulario/formulario.html">formulario de contacto</a> y nos pondremos en contacto con usted lo antes posible.</p>
     </aside>
 
-
     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
     </footer>
 </body>
 </html>
-
-
