--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         <!-- Articulaciones - Imagen interactiva -->
         <article>
             <h3>Articulaciones</h3>
-            <img src="imagenes/persona.jpg" alt="Cuerpo humano" usemap="#cuerpo-map" width="400" height="800">
+            <img src="persona.jpg" alt="Cuerpo humano" usemap="#cuerpo-map" width="400" height="800">
+            <p>Haz clic en una articulación del cuerpo para obtener más información.</p>
             <map name="cuerpo-map">
                 <area shape="rect" coords="130,50,260,150" alt="Hombro" href="articulos/hombro.html">
+                <area shape="rect" coords="130,200,260,300" alt="Codo" href="articulos/codo.html">
+                <area shape="rect" coords="140,350,250,450" alt="Muñeca" href="articulos/muneca.html">
                 <area shape="rect" coords="130,600,260,700" alt="Rodilla" href="articulos/rodilla.html">
-                <area shape="circle" coords="190,130,50" alt="Cabeza" href="articulos/cabeza.html">
-                <area shape="circle" coords="190,750,40" alt="Tobillo" href="articulos/tobillo.html">
-                <area shape="poly" coords="180,200,220,200,230,250,170,250" alt="Codo derecho" href="articulos/codo_derecho.html">
-                <area shape="poly" coords="180,300,220,300,230,350,170,350" alt="Codo izquierdo" href="articulos/codo_izquierdo.html">
+                <area shape="rect" coords="140,750,250,850" alt="Tobillo" href="articulos/tobillo.html">
             </map>
         </article>
 
