--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <!-- Articulaciones - Imagen interactiva -->
         <article>
             <h3>Articulaciones</h3>
-            <img src="persona.jpg" alt="Cuerpo humano" usemap="#cuerpo-map" width="400" height="800">
+            <img src="imgagenes/persona.jpg" alt="Cuerpo humano" usemap="#cuerpo-map" width="400" height="800">
             <p>Haz clic en una articulación del cuerpo para obtener más información.</p>
             <map name="cuerpo-map">
                 <area shape="rect" coords="130,50,260,150" alt="Hombro" href="articulos/hombro.html">
