--- a/articulos/dolor_cabeza.html
+++ b/articulos/dolor_cabeza.html
@@ -24,24 +24,24 @@
         <!-- Definición del Mapa de Imagen -->
         <map name="dolorCabezaMap">
             <!-- Rectángulo 1: Problemas temporomandibulares -->
-            <area shape="rect" coords="0,0,200,200" href="../articulos/temporomandibulares.html" alt="Problemas temporomandibulares" title="Problemas temporomandibulares">
+            <area shape="rect" coords="0,0,200,200" href="https://www.nidcr.nih.gov/espanol/temas-de-salud/los-trastornos-temporomandibulares" alt="Problemas temporomandibulares" title="Problemas temporomandibulares">
 
             <!-- Rectángulo 2: Dolor en los senos -->
-            <area shape="rect" coords="200,0,400,200" href="../articulos/senos.html" alt="Dolor en los senos" title="Dolor en los senos">
+            <area shape="rect" coords="200,0,400,200" href="https://www.mayoclinic.org/es/diseases-conditions/sinus-headaches/symptoms-causes/syc-20377580" alt="Dolor en los senos" title="Dolor en los senos">
 
             <!-- Círculo 1: Cefalea en racimos -->
-            <area shape="circle" coords="500,100,80" href="../articulos/racimos.html" alt="Cefalea en racimos" title="Cefalea en racimos">
+            <area shape="circle" coords="500,100,80" href="https://www.mayoclinic.org/es/diseases-conditions/cluster-headache/symptoms-causes/syc-20352080" alt="Cefalea en racimos" title="Cefalea en racimos">
 
             <!-- Círculo 2: Migraña -->
-            <area shape="circle" coords="100,300,80" href="../articulos/migrana.html" alt="Migraña" title="Migraña">
+            <area shape="circle" coords="100,300,80" href="https://www.mayoclinic.org/es/diseases-conditions/tension-headache/symptoms-causes/syc-20353977" alt="Migraña" title="Migraña">
 
             <!-- Polígono 1: Dolor por tensión -->
-            <area shape="poly" coords="250,200,350,220,380,280,320,300,250,260" href="../articulos/tension.html" alt="Dolor por tensión" title="Dolor por tensión">
+            <area shape="poly" coords="250,200,350,220,380,280,320,300,250,260" href="https://www.infoespalda.es/dolor-de-cabeza-en-la-nuca" alt="Dolor por tensión" title="Dolor por tensión">
 
             <!-- Polígono 2 ajustado: Migraña -->
-            <area shape="poly" coords="430,220,480,230,520,290,480,340,430,290" href="../articulos/migrana.html" alt="Migraña" title="Migraña">
+            <area shape="poly" coords="430,220,480,230,520,290,480,340,430,290" href="https://medlineplus.gov/spanish/ency/article/000709.htm" alt="Migraña" title="Migraña">
         </map>
-
+<p>Haz click en la imagen para ver más a fondo cada tipo de dolor</p>
         <h3>Causas</h3>
         <p>Puede ser causado por estrés, tensión muscular, migrañas o infecciones.</p>
 
