--- a/index.html
+++ b/index.html
@@ -57,26 +57,31 @@
         <!-- Articulaciones - Imagen interactiva -->
         <article>
             <h3>Articulaciones</h3>
-            <p>Haz clic en una articulación del cuerpo para obtener más información.</p>
-            <img src="imagenes/persona.jpg" alt="Cuerpo humano" usemap="#cuerpo-map" width="600" height="1200">
+            <img src="imagenes/persona.jpg" alt="Cuerpo humano" usemap="#cuerpo-map" width="600" height="1000">
             <map name="cuerpo-map">
-                <!-- Rectángulos -->
-                <area shape="rect" coords="190,75,380,225" alt="Hombro" href="articulos/hombro.html">
-                <area shape="rect" coords="190,900,380,1050" alt="Rodilla" href="articulos/rodilla.html">
+                <!-- Cabeza -->
+                <area shape="circle" coords="300,150,50" alt="Cabeza" href="articulos/cabeza.html">
 
-                <!-- Círculos -->
-                <area shape="circle" coords="290,195,75" alt="Cabeza" href="articulos/cabeza.html">
-                <area shape="circle" coords="290,1125,60" alt="Tobillo" href="articulos/tobillo.html">
+                <!-- Hombro -->
+                <area shape="rect" coords="220,250,380,320" alt="Hombro" href="articulos/hombro.html">
 
-                <!-- Polígonos -->
-                <area shape="poly" coords="270,300,330,300,345,375,255,375" alt="Codo derecho" href="articulos/codo_derecho.html">
-                <area shape="poly" coords="270,450,330,450,345,525,255,525" alt="Codo izquierdo" href="articulos/codo_izquierdo.html">
+                <!-- Codo -->
+                <area shape="poly" coords="220,400,380,400,380,470,220,470" alt="Codo" href="articulos/codo.html">
+
+                <!-- Muñeca -->
+                <area shape="rect" coords="250,600,350,650" alt="Muñeca" href="articulos/muneca.html">
+
+                <!-- Rodilla -->
+                <area shape="rect" coords="230,750,370,820" alt="Rodilla" href="articulos/rodilla.html">
+
+                <!-- Tobillo -->
+                <area shape="circle" coords="300,920,40" alt="Tobillo" href="articulos/tobillo.html">
             </map>
         </article>
 
         <article>
             <h3>Diabetes</h3>
-            <img src="imagenes/diabetes.jpeg" alt="Foto diabetes: Persona midiendose el azucar en sangre." width="500" height="200">
+            <img src="imagenes/diabetes.jpeg" alt="Foto diabetes: Persona midiendose el azucar en sangre." width="400" height="200">
             <p>La diabetes es una enfermedad crónica que afecta la capacidad del cuerpo para procesar la glucosa en la sangre.</p>
             <a href="articulos/diabetes.html">Más información sobre la Diabetes</a>
         </article>
