--- a/index.html
+++ b/index.html
@@ -62,26 +62,23 @@
         <!-- Círculo 1: Cabeza -->
         <area shape="circle" coords="300,120,50" alt="Cabeza" href="articulos/cabeza.html">
 
-        <!-- Rectángulo 1: Hombro -->
+        <!-- Hombro -->
         <area shape="rect" coords="160,220,440,300" alt="Hombro" href="articulos/hombro.html">
 
-        <!-- Polígono 1: Codo -->
+        <!-- Codo -->
         <area shape="poly" coords="160,370,250,370,250,450,160,450" alt="Codo" href="articulos/codo.html">
 
-        <!-- Polígono 2: Muñeca -->
+        <!-- Muñeca -->
         <area shape="poly" coords="180,530,420,530,420,580,180,580" alt="Muñeca" href="articulos/muneca.html">
 
-        <!-- Rectángulo 2: Rodilla -->
+        <!-- Rodilla -->
         <area shape="rect" coords="230,750,370,820" alt="Rodilla" href="articulos/rodilla.html">
 
-        <!-- Círculo 2: Tobillo -->
+        <!-- Tobillo -->
         <area shape="circle" coords="300,920,40" alt="Tobillo" href="articulos/tobillo.html">
     </map>
 </article>
-
-
-
-
+        
         <article>
             <h3>Diabetes</h3>
             <img src="imagenes/diabetes.jpeg" alt="Foto diabetes: Persona midiendose el azucar en sangre." width="400" height="200">
