--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
         <!-- Círculo 1: Cabeza -->
         <area shape="circle" coords="300,120,50" alt="Cabeza" href="articulos/cabeza.html">
 
-        <!-- Hombro -->
+        <!-- Rectángulo 1: Hombro -->
         <area shape="rect" coords="160,220,440,300" alt="Hombro" href="articulos/hombro.html">
 
-        <!-- Codo -->
-        <area shape="poly" coords="160,370,250,370,250,450,160,450" alt="Codo" href="articulos/codo.html">
+        <!-- Polígono 1: Codo (Hexágono) -->
+        <area shape="poly" coords="180,370,220,350,280,350,320,370,280,390,220,390" alt="Codo" href="articulos/codo.html">
 
-        <!-- Muñeca -->
-        <area shape="poly" coords="180,530,420,530,420,580,180,580" alt="Muñeca" href="articulos/muneca.html">
+        <!-- Polígono 2: Muñeca (Hexágono) -->
+        <area shape="poly" coords="180,530,220,510,280,510,320,530,280,550,220,550" alt="Muñeca" href="articulos/muneca.html">
 
-        <!-- Rodilla -->
+        <!-- Rectángulo 2: Rodilla -->
         <area shape="rect" coords="230,750,370,820" alt="Rodilla" href="articulos/rodilla.html">
 
-        <!-- Tobillo -->
+        <!-- Círculo 2: Tobillo -->
         <area shape="circle" coords="300,920,40" alt="Tobillo" href="articulos/tobillo.html">
     </map>
 </article>
