--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         <!-- Rectángulo 1: Hombro -->
         <area shape="rect" coords="160,220,440,300" alt="Hombro" href="articulos/hombro.html">
 
-        <!-- Polígono 1: Codo (Hexágono) -->
-        <area shape="poly" coords="180,370,220,350,280,350,320,370,280,390,220,390" alt="Codo" href="articulos/codo.html">
+        <!-- Polígono 1: Codo (Hexágono Ampliado y Movido) -->
+        <area shape="poly" coords="200,370,240,350,300,350,340,370,300,390,240,390" alt="Codo" href="articulos/codo.html">
 
-        <!-- Polígono 2: Muñeca (Hexágono) -->
+        <!-- Polígono 2: Muñeca (Hexágono Ampliado y Movido) -->
         <area shape="poly" coords="180,530,220,510,280,510,320,530,280,550,220,550" alt="Muñeca" href="articulos/muneca.html">
 
         <!-- Rectángulo 2: Rodilla -->
