--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <!-- Articulaciones - Imagen interactiva -->
    <article>
     <h3>Articulaciones</h3>
+    <p>Pinche en alguna articulación para más información.</p>
     <img src="imagenes/persona.jpg" alt="Cuerpo humano" usemap="#cuerpo-map" width="600" height="1000">
     <map name="cuerpo-map">
         <!-- Círculo 1: Cabeza -->
