--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <area shape="rect" coords="160,220,440,300" alt="Hombro" href="articulos/hombro.html">
 
         <!-- Polígono 1: Codo (Hexágono Ampliado y Movido) -->
-        <area shape="poly" coords="200,370,240,350,300,350,340,370,300,390,240,390" alt="Codo" href="articulos/codo.html">
-
+        <area shape="poly" coords="150,370,190,350,250,350,290,370,250,390,190,390" alt="Codo Izquierdo" href="articulos/codo.html">
+        <area shape="poly" coords="350,370,390,350,450,350,490,370,450,390,390,390" alt="Codo Derecho" href="articulos/codo.html">
         <!-- Polígono 2: Muñeca (Hexágono Ampliado y Movido) -->
         <area shape="poly" coords="100,530,220,510,280,510,320,530,280,550,220,600" alt="Muñeca" href="articulos/muneca.html">
 
