--- a/index.html
+++ b/index.html
@@ -67,11 +67,13 @@
         <area shape="rect" coords="160,220,440,300" alt="Hombro" href="articulos/hombro.html">
 
         <!-- Polígono 1: Codo (Hexágono Ampliado y Movido) -->
+        
         <area shape="poly" coords="150,370,190,350,250,350,290,370,250,390,190,390" alt="Codo Izquierdo" href="articulos/codo.html">
         <area shape="poly" coords="350,370,390,350,450,350,490,370,450,390,390,390" alt="Codo Derecho" href="articulos/codo.html">
-        <!-- Polígono 2: Muñeca (Hexágono Ampliado y Movido) -->
-        <area shape="poly" coords="100,530,220,510,280,510,320,530,280,550,220,600" alt="Muñeca" href="articulos/muneca.html">
-
+        <!-- Polígono 1: Muñeca (Hexágono Ampliado y Movido) -->
+        
+        <area shape="poly" coords="120,530,180,500,340,500,400,530,340,560,180,560" alt="Muñeca Izquierda" href="articulos/muneca.html">
+        <area shape="poly" coords="380,530,440,500,600,500,660,530,600,560,440,560" alt="Muñeca Derecha" href="articulos/muneca.html">
         <!-- Rectángulo 2: Rodilla -->
         <area shape="rect" coords="230,700,370,770" alt="Rodilla" href="articulos/rodilla.html">
 
