--- a/index.html
+++ b/index.html
@@ -60,23 +60,18 @@
     <p>Pinche en alguna articulación para más información.</p>
     <img src="imagenes/persona.jpg" alt="Cuerpo humano" usemap="#cuerpo-map" width="600" height="1000">
     <map name="cuerpo-map">
-        <!-- Círculo 1: Cabeza -->
+        <!-- Cabeza -->
         <area shape="circle" coords="300,120,50" alt="Cabeza" href="articulos/cabeza.html">
-
-        <!-- Rectángulo 1: Hombro -->
+        <!-- Hombro -->
         <area shape="rect" coords="160,220,440,300" alt="Hombro" href="articulos/hombro.html">
-
-        <!-- Polígono 1: Codo (Hexágono Ampliado y Movido) -->
-        
+        <!-- Codo  -->
         <area shape="poly" coords="150,370,190,350,250,350,290,370,250,390,190,390" alt="Codo Izquierdo" href="articulos/codo.html">
         <area shape="poly" coords="350,370,390,350,450,350,490,370,450,390,390,390" alt="Codo Derecho" href="articulos/codo.html">
-        <!-- Polígono 1: Muñeca (Hexágono Ampliado y Movido) -->
-        
-        <area shape="poly" coords="120,530,180,500,340,500,400,530,340,560,180,560" alt="Muñeca Izquierda" href="articulos/muneca.html">
-        <area shape="poly" coords="380,530,440,500,600,500,660,530,600,560,440,560" alt="Muñeca Derecha" href="articulos/muneca.html">
+        <!-- Muñeca -->
+        <area shape="poly" coords="150,530,180,510,250,510,280,530,250,550,180,550" alt="Muñeca Izquierda" href="articulos/muneca.html">
+        <area shape="poly" coords="320,530,350,510,420,510,450,530,420,550,350,550" alt="Muñeca Derecha" href="articulos/muneca.html">
         <!-- Rectángulo 2: Rodilla -->
         <area shape="rect" coords="230,700,370,770" alt="Rodilla" href="articulos/rodilla.html">
-
         <!-- Círculo 2: Tobillo -->
         <area shape="circle" coords="300,920,40" alt="Tobillo" href="articulos/tobillo.html">
     </map>
