--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
     <img src="imagenes/persona.jpg" alt="Cuerpo humano" usemap="#cuerpo-map" width="600" height="1000">
     <map name="cuerpo-map">
         <!-- Cabeza -->
-        <area shape="circle" coords="300,120,50" alt="Cabeza" href="articulos/cabeza.html">
+        <area shape="circle" coords="300,120,50" alt="Cabeza" href="https://www.kenhub.com/es/library/anatomia-es/anatomia-de-la-cabeza">
         <!-- Hombro -->
-        <area shape="rect" coords="160,220,440,300" alt="Hombro" href="articulos/hombro.html">
+        <area shape="rect" coords="160,220,440,300" alt="Hombro" href="https://www.clinicacemtro.com/traumatologia/unidad-de-hombro/anatomia-biomecanica-hombro/">
         <!-- Codo  -->
-        <area shape="poly" coords="150,370,190,350,250,350,290,370,250,390,190,390" alt="Codo Izquierdo" href="articulos/codo.html">
-        <area shape="poly" coords="350,370,390,350,450,350,490,370,450,390,390,390" alt="Codo Derecho" href="articulos/codo.html">
+        <area shape="poly" coords="150,370,190,350,250,350,290,370,250,390,190,390" alt="Codo Izquierdo" href="https://www.ufv.es/cetys/blog/anatomia-del-codo/">
+        <area shape="poly" coords="350,370,390,350,450,350,490,370,450,390,390,390" alt="Codo Derecho" href="https://www.ufv.es/cetys/blog/anatomia-del-codo/">
         <!-- Muñeca -->
-        <area shape="poly" coords="150,530,180,510,250,510,280,530,250,550,180,550" alt="Muñeca Izquierda" href="articulos/muneca.html">
-        <area shape="poly" coords="320,530,350,510,420,510,450,530,420,550,350,550" alt="Muñeca Derecha" href="articulos/muneca.html">
+        <area shape="poly" coords="150,530,180,510,250,510,280,530,250,550,180,550" alt="Muñeca Izquierda" href="https://camde.es/conoce-la-anatomia-de-la-muneca/">
+        <area shape="poly" coords="320,530,350,510,420,510,450,530,420,550,350,550" alt="Muñeca Derecha" href="https://camde.es/conoce-la-anatomia-de-la-muneca/">
         <!-- Rectángulo 2: Rodilla -->
-        <area shape="rect" coords="230,700,370,770" alt="Rodilla" href="articulos/rodilla.html">
+        <area shape="rect" coords="230,700,370,770" alt="Rodilla" href="https://camde.es/anatomia-de-la-rodilla/">
         <!-- Círculo 2: Tobillo -->
-        <area shape="circle" coords="300,920,40" alt="Tobillo" href="articulos/tobillo.html">
+        <area shape="circle" coords="300,920,40" alt="Tobillo" href="https://www.elsevier.es/es-revista-revista-espanolareumatologia-29-articulo-anatomia-funcionalbiomecanica-del-tobillo-13055077">
     </map>
 </article>
         
