--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <!-- Muñeca -->
         <area shape="poly" coords="140,530,180,510,250,510,280,530,250,550,180,550" alt="Muñeca Izquierda" href="https://camde.es/conoce-la-anatomia-de-la-muneca/">
         <area shape="poly" coords="340,530,370,510,440,510,470,530,440,550,370,550" alt="Muñeca Derecha" href="https://camde.es/conoce-la-anatomia-de-la-muneca/">
-        <!-- Rectángulo 2: Rodilla -->
+        <!-- Rodilla -->
         <area shape="rect" coords="230,700,370,770" alt="Rodilla" href="https://camde.es/anatomia-de-la-rodilla/">
-        <!-- Círculo 2: Tobillo -->
+        <!-- Tobillo -->
         <area shape="circle" coords="300,920,40" alt="Tobillo" href="https://www.elsevier.es/es-revista-revista-espanolareumatologia-29-articulo-anatomia-funcionalbiomecanica-del-tobillo-13055077">
     </map>
 </article>
