--- a/declaracion_accesibilidad.html
+++ b/declaracion_accesibilidad.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Declaración de accesibilidad - HealtHub</title>
+</head>
+<body>
+    <header>
+        <h1>HealthHub - Enciclopedia Ilustrada de Salud</h1>
+        <a href="../index.html">
+            <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
+        </a>
+    </header>
