--- a/declaracion_accesibilidad.html
+++ b/declaracion_accesibilidad.html
@@ -11,3 +11,13 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
+
+    <main>
+        
+    </main>
+    
+    <footer>
+        <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
+    </footer>
+</body>
+</html>
