--- a/index.html
+++ b/index.html
@@ -106,6 +106,53 @@
         </article>
 
     </section>
+    
+    <section>
+    <h2>Mapa del Sitio</h2>
+    <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="buscador/buscador.html">Buscador</a>
+            <ul>
+                <li><a href="buscador/resultado.html">Resultados</a></li>
+            </ul>
+        </li>
+        <li><a href="formulario/formulariohtml5.html">Formulario de síntomas</a>
+            <ul>
+                <li><a href="formulario/formulariohtml5.html">Formulario HTML5</a></li>
+                <li><a href="formulario/respuestaformhtml5.html">Respuestas del formulario de síntomas</a></li>
+            </ul>
+        </li>
+        <li><a href="formulario/formulario.html">Formulario de ayuda al cliente</a>
+            <ul>
+                <li><a href="formulario/formulario.html">Formulario básico</a></li>
+                <li><a href="formulario/respuestaform.html">Respuestas del formulario de ayuda</a></li>
+            </ul>
+        </li>
+        <li><a href="indices/a.html">Índice Alfabético - A</a>
+            <ul>
+                <li><a href="indices/a.html">A</a></li>
+                <li><a href="articulos/alergia.html">Alergias</a></li>
+                <li><a href="articulos/asma.html">Asma</a></li>
+            </ul>
+        </li>
+        <li><a href="indices/d.html">Índice Alfabético - D</a>
+            <ul>
+                <li><a href="indices/d.html">D</a></li>
+                <li><a href="articulos/diabetes.html">Diabetes</a></li>
+                <li><a href="articulos/dolor_cabeza.html">Dolor de cabeza</a></li>
+            </ul>
+        </li>
+        <li><a href="temas_destacados.html">Temas destacados</a>
+            <ul>
+                <li><a href="articulos/alergia.html">Alergias</a></li>
+                <li><a href="articulos/asma.html">Asma</a></li>
+                <li><a href="articulos/diabetes.html">Diabetes</a></li>
+                <li><a href="articulos/dolor_cabeza.html">Dolor de cabeza</a></li>
+            </ul>
+        </li>
+        <li><a href="declaracion_accesibilidad.html">Declaración de Accesibilidad</a></li>
+    </ul>
+    </section>
 
     <aside>
         <h3>¿Le ha servido nuestra enciclopedia?</h3>
