--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
         </li>
         <li><a href="formulario/formulariohtml5.html">Formulario de síntomas</a>
             <ul>
-                <li><a href="formulario/formulariohtml5.html">Formulario HTML5</a></li>
+                <li><a href="formulario/formulariohtml5.html">Formulario de síntomas</a></li>
                 <li><a href="formulario/respuestaformhtml5.html">Respuestas del formulario de síntomas</a></li>
             </ul>
         </li>
         <li><a href="formulario/formulario.html">Formulario de ayuda al cliente</a>
             <ul>
-                <li><a href="formulario/formulario.html">Formulario básico</a></li>
+                <li><a href="formulario/formulario.html">Formulario de contacto</a></li>
                 <li><a href="formulario/respuestaform.html">Respuestas del formulario de ayuda</a></li>
             </ul>
         </li>
@@ -161,6 +161,8 @@
     
     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
+        <p><a href="declaracion_accesibilidad.html">Declaración de Accesibilidad</a></p>
     </footer>
+
 </body>
 </html>
