--- a/articulos/asma.html
+++ b/articulos/asma.html
@@ -45,6 +45,8 @@
 
     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
+        <p><a href="../declaracion_accesibilidad.html">Declaración de Accesibilidad</a></p>
     </footer>
+    
 </body>
 </html>
