--- a/buscador/buscador.html
+++ b/buscador/buscador.html
@@ -40,8 +40,10 @@
         <br>
         <a href="../index.html">Volver al índice</a>
     </main>
-    <footer>
+    
+   <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
+        <p><a href="../declaracion_accesibilidad.html">Declaración de Accesibilidad</a></p>
     </footer>
 </body>
 </html>
