--- a/formulario/formulario.html
+++ b/formulario/formulario.html
@@ -58,6 +58,7 @@
 
     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
+        <p><a href="../declaracion_accesibilidad.html">Declaración de Accesibilidad</a></p>
     </footer>
 </body>
 </html>
