--- a/indices/d.html
+++ b/indices/d.html
@@ -22,8 +22,9 @@
         <a href="../index.html">Volver al índice alfabético</a>
     </main>
 
-    <footer>
+     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
+        <p><a href="../declaracion_accesibilidad.html">Declaración de Accesibilidad</a></p>
     </footer>
 </body>
 </html>
