--- a/indices/error404.html
+++ b/indices/error404.html
@@ -18,8 +18,9 @@
         <p>Por favor, vuelve al <a href="../index.html">índice alfabético</a> y selecciona otra letra.</p>
     </main>
 
-    <footer>
+     <footer>
         <p>Enciclopedia Ilustrada de Salud &copy; 2024. Todos los derechos reservados por Hugo Molina y Cristian Such.</p>
+        <p><a href="../declaracion_accesibilidad.html">Declaración de Accesibilidad</a></p>
     </footer>
 </body>
 </html>
