--- a/declaracion_accesibilidad.html
+++ b/declaracion_accesibilidad.html
@@ -41,7 +41,8 @@
             <h3>Niveles de conformidad</h3>
             <p>Este sitio web cumple en su mayoría con el nivel AA de las Pautas de Accesibilidad para el Contenido Web (WCAG) 2.1, aunque aún estamos trabajando en mejorar ciertos elementos para garantizar una accesibilidad total.</p>
         </section>
-        
+
+        <p>Volver al <a href="index.html">índice alfabético</a>.</p>
     </main>
     
     <footer>
