--- a/articulos/alergia.html
+++ b/articulos/alergia.html
@@ -18,6 +18,14 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
+
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            <a href="../indices/a.html">Índice Alfabético</a> &gt; 
+            Alergias
+        </p>
+    </nav>
    
 
     <main>
