--- a/articulos/asma.html
+++ b/articulos/asma.html
@@ -12,6 +12,14 @@
             <img src="../imagenes/logo.jpeg" alt="Logo de la página" width="200" height="200">
         </a>
     </header>
+    
+    <nav aria-label="breadcrumbs">
+        <p>
+            <a href="../index.html">Inicio</a> &gt; 
+            <a href="../indices/a.html">Índice Alfabético</a> &gt; 
+            Asma
+        </p>
+    </nav>
 
     <main>
         <h2>Asma</h2>
